Added comments tto javaScript function

--- a/PortfolioLayouts/backStretchExample.html
+++ b/PortfolioLayouts/backStretchExample.html
@@ -73,7 +73,7 @@
 			"https://pixabay.com/static/uploads/photo/2016/05/12/20/58/water-lilies-1388690_960_720.jpg",
 			"https://pixabay.com/static/uploads/photo/2016/05/22/14/25/dog-1408535__180.jpg"
 
-			],{duration: 5000, fade:750});
+    ],{duration: 5000, fade:750});//duration of of change = 5,000 mili seconds
 
       $(window).scroll(function(){
           $("#slideRound").css("opacity", 1- $(window).scrollTop() / 350);
